Fix some wrong text

--- a/instruction.tex
+++ b/instruction.tex
@@ -188,7 +188,7 @@
 	\end{tcolorbox}
 
 	\begin{itemize}
-		\item 仅支持使用 amd64(x86-64) 架构的计算机、服务器和嵌入式设备。
+		\item 仅支持使用 x86-64 架构的计算机、服务器和嵌入式设备。
 		\item 本包装盒中的安装媒介适用于何平台以实际为准。
 	\end{itemize}
 
@@ -219,7 +219,7 @@
 	\section*{不良反应}
 	\end{tcolorbox}
 
-	Arch Linux 有一个对用户和开发者所提交的软件缺陷报告进行归档管理的缺陷跟踪系统，英文缩写。每个软件缺陷报告都被授予一个编号并且被长期跟踪，直到它被标记为已修复。
+	Arch Linux 有一个对用户和开发者所提交的软件缺陷报告进行归档管理的缺陷跟踪系统，每个软件缺陷报告都被授予一个编号并且被长期跟踪，直到它被标记为已修复。
 
 	可以在 https://bugs.archlinux.org/ 处得到详细信息。
 
@@ -241,7 +241,7 @@
 			\hline
 			无桌面 & 512MB & 1GB & 2GB \\
 			\hline
-			有桌面 & 512MB & 2GB & 10GB \\
+			有桌面 & 1GB & 2GB & 10GB \\
 			\hline
 		\end{tabularx}}
 
@@ -311,7 +311,7 @@
 
 		\item 与其他 Linux 发行版的相互作用
 
-		与 Manjaro 混用时，可能导致用户仓库宕机。
+		与 Manjaro 混用时，可能导致 AUR 宕机。
 
 	\end{itemize}
 
