Fix line break issue

--- a/instruction.tex
+++ b/instruction.tex
@@ -139,9 +139,9 @@
 
 			无论是否与其它操作系统合用，安装 Arch Linux 均存在丢失磁盘上所有内容的风险。（参见【不良反应】）
 
-			某些与多媒体相关的软件，特别是允许回放和提供音频、视频操作或类似功能的软件，不被 Arch Linux 包含，这是因为它在世界上的某些地区被认为是非法的。本说明中的信息和意见无意构成法律建议，法律建议可通过咨询律师来获得。
+            本说明中的信息和意见无意构成法律建议，法律建议可通过咨询律师来获得。
 
-			一些硬件制造商拒绝告诉我们如何给他们的硬件编写驱动程序。另一些则要求签署不公开的契约才能接触相关文档，以阻止我们发布驱动程序源代码这一自由软件的核心内容。由于我们未被授权使用这些文档，因此它们无法在 Linux 下工作。
+			一些硬件制造商拒绝告诉我们如何给他们的硬件编写驱动程序。另一些则要求签署不公开的契约才能接触相关文档，以阻止我们以自由软件形式发布驱动程序源代码。由于我们未被授权使用这些文档，因此它们无法在 Linux 下工作。
 		\end{mdframed}
 	\end{minipage}}
 	\setlength{\columnshrink}{\ht\twocolinsert}
