--- a/instruction.tex
+++ b/instruction.tex
@@ -188,7 +188,7 @@
 	\end{tcolorbox}
 
 	\begin{itemize}
-		\item 仅支持使用 x86-64 架构的计算机、服务器和嵌入式设备。
+		\item 仅支持使用 x86-64 (AMD64) 架构的计算机、服务器和嵌入式设备。
 		\item 本包装盒中的安装媒介适用于何平台以实际为准。
 	\end{itemize}
 
@@ -233,7 +233,7 @@
 
 		\item 满足最低的硬件要求
 
-		Pentium 4、1GHz 的处理器是桌面系统的最低推荐配置，下表是内存和硬盘的需求。
+		下表是内存和硬盘的需求。
 
 		{\small\begin{tabularx}{\linewidth}{|X|X|X|X|}
 			\hline
@@ -307,7 +307,7 @@
 
 		当您有双引导时，若另一个操作系统与 Windows 访问相同的文件系统，这就有可能会导致问题和数据丢失。在这种情况下，文件系统的真实状态可能与 Windows 认为在“启动”之后的情况不同，并且可能在进一步写入文件系统时导致文件系统损坏。因此，在双引导设置中，为了避免文件系统损坏，有必要在 Windows 中禁用“快速启动”功能。
 
-		在罕见情况中已观察到，在使用 Windows 进行系统更新时，可能会出现重新启动后 GRUB 引导被破坏从而导致 Arch Linux 无法启动的情况。同时，若在安装过程中将引导信息写入与 Windows 所在的物理磁盘 MBR 内，将导致后者无法正常启动。
+		在罕见情况中已观察到，在使用 Windows 进行系统更新时，可能会出现重新启动后引导被破坏从而导致 Arch Linux 无法启动的情况。同时，若在安装过程中将引导信息写入与 Windows 所在的物理磁盘 MBR 内，将导致后者无法正常启动。
 
 		\item 与其他 Linux 发行版的相互作用
 
@@ -322,7 +322,7 @@
 
 	-40℃\textasciitilde +70℃
 
-	妥善贮藏所有安装媒介，勿使不会安装的人员触及。
+	妥善贮藏所有安装媒介，勿使非安装人员触及。
 
 	\medskip
 
@@ -331,7 +331,7 @@
 	\section*{包装}
 	\end{tcolorbox}
 
-	装有 Arch Linux 安装镜像的、兼容 USB 3.0/2.0 协议的大容量存储设备。
+	刻录有 Arch Linux 安装映像的、兼容 USB 3.0/2.0 协议的闪存驱动器。
 
 	1 枚/盒
 
@@ -342,9 +342,7 @@
 	\section*{有效期}
 	\end{tcolorbox}
 
-	完整支持：36 个月
-
-	长期支持：60 个月
+	Arch Linux 使用滚动升级模式，只需执行一条命令，便可升级系统到最新版本。基于上述原因，对 Arch Linux 的支持长期有效。
 
 	\medskip
 
